# pqc-demo-server

./: README.md  setup
backend/: .gitignore  CMakeLists.txt  compile_to_run  http_server.c  proxy_server  proxy_server.c  requirements.txt  server.py  server_react.py  setting.conf
backend/crypto/: CMakeLists.txt  aes_256_gcm.c  crypto_meth.c  x25519.c
backend/deprecated/: rsa_pkcs1_sha384.c
backend/include/base/: base.h  param.h  serving.h  types.h
backend/include/crypto/: aes_256_gcm.h  crypto_meth.h  openssl_base.h  x25519.h
backend/include/crypto/deprecated/: rsa_pkcs1_sha384.h
backend/include/kyber/: kem.h
backend/include/pynq/: pynq.h  uart.h
backend/include/server/: serving.h
backend/include/tls/: handshake.h  rsa_pss_rsae_sha_t.h  tls13_enc_dec.h  tls13_hkdf_expand.h
backend/kyber/: CMakeLists.txt  cbd.c  cbd.h  indcpa.c  indcpa.h  kem.c  kex.h  ntt.c  ntt.h  poly.c  poly.h  polyvec.c  polyvec.h  reduce.c  reduce.h  symmetric-shake.c  symmetric.h  verify.h
backend/pynq/: CMakeLists.txt  pynq.c  win_serial.c
backend/server/: CMakeLists.txt  base.c  serving.c
backend/src/: proxy_server_stable.c
backend/src/cert/: .gitignore  rootCA.key  rootCA.pem  www.pqc-demo.xyz.crt  www.pqc-demo.xyz.der  www.pqc-demo.xyz.key  www.pqc-demo.xyz.pub
backend/tls/: CMakeLists.txt  handshake.c  rsa_pss_rsae_sha_t.c  tls13_enc_dec.c  tls13_hkdf_expand.c  x25519_kyber768_draft00_handshake.c
frontend/src/: App.css  App.js  index.css
